--- a/spotify-clone-project/index.html
+++ b/spotify-clone-project/index.html
@@ -57,7 +57,7 @@
             <i class="fa-solid fa-forward" id="next"></i>
         </div>
         <div class="songinfo">
-            <img width="50px" alt="" id="gif"> Hona Tha Pyar - Atif Aslam
+            <img src="giphy.gif" width="50px" alt="" id="gif"> <span id="mastersongname">Hona Tha Pyar</span> 
         </div>
     </div>
     <script src="https://kit.fontawesome.com/bfa336c58d.js" crossorigin="anonymous"></script>
